413684 deprecated unsafe alias checkers